@@ -1,4 +1,5 @@
 1.6.0
+* Client: improved bandwidth statistics
 * New tool "bdb", for managing and deframenting the blocks database
 * Lib: check each new block for MAX_BLOCK_SIGOPS
 * Lib: check for merkle tree malleability (CVE-2012-2459) when accepting block
